# agent-casper

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  REQUIREMENTS.md  SECURITY.md  SUBMISSION.md  demo_buyer_agent.py  demo_x402.py  gen_buyer_key.py  gen_key.py  nixpacks.toml  railway.json  render.yaml  start.ps1
.claude/: settings.json
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build-contract.yml  build-wasm.yml  codeql.yml  deploy-contract.yml
backend/: .env.example  deploy_server.py  main.py  requirements.txt  yield_vault.wasm
backend/agent/: __init__.py  decision_engine.py  decision_proof.py  performance.py  yield_agent.py
backend/casper/: __init__.py  client.py  cspr_trade.py  deployer.py  eip712.py  mcp_server.py  paths.py  rwa_oracle.py  staking_log.py  swap_log.py  trust_engine.py  trust_state.py  vault_registry.py  (+2 more)
contracts/: Cargo.toml  Dockerfile.build  Odra.toml  build.rs  rust-toolchain.toml
contracts/src/: lib.rs  yield_vault.rs
contracts/wasm/: yield_vault.wasm
deploy/: deploy_vault.py
docs/: PAYOUT_AND_VOTING.md  REAL_CUSTODY.md  buidl-onchain-proof.md  buildathon-submission-plain.md  buildathon-submission.md  dorahacks.md
frontend/: .env.example  nixpacks.toml  package-lock.json  package.json  tailwind.config.js  tsconfig.tsbuildinfo
scripts/: buyer_pays_agent.py  deploy_testnet.ps1  deploy_testnet.sh  deploy_x402_token.py  fund_buyer.py  pay_live_endpoint.py  test_x402.py  x402_settle_real.py  x402_verify_proof.py
(+38 files in other folders)
