[package]
name = "yield-vault"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
odra = { version = "=2.7.2" }

[dev-dependencies]
odra-test = "=2.7.2"

[build-dependencies]
odra-build = "=2.7.2"

[[bin]]
name = "yield_vault_build_contract"
path = "bin/yield_vault_build_contract.rs"
test = false

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
